<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.evilracoon.raccountant.add_activity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/lblAddTime"
                android:id="@+id/lblAddTime"
                android:layout_marginRight="5sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/valAddTime"
                android:id="@+id/valAddTime" />
        </LinearLayout>

        <View
            android:id="@+id/SplitLine_hor1_2"
            android:layout_width="match_parent"
            android:layout_height= "1dp"
            android:background="#000" />


        <RadioGroup
                android:id="@+id/radioGroupAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="credit"
                android:checked="true"
                android:id="@+id/addDistMinus" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="debit"
                android:checked="false"
                android:id="@+id/addDistPlus" />
        </RadioGroup>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/lblAddAmount"
                android:id="@+id/lblAddAmount" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/valAddAmount" />
        </LinearLayout>

        <View
            android:id="@+id/SplitLine_hor1_3"
            android:layout_width="match_parent"
            android:layout_height= "1dp"
            android:background="#000" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/lblAddDescr"
                android:id="@+id/lblAddDescr" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/valAddDescr"
                android:scrollbars="vertical"
                android:minLines="10"/>
        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/SplitLine_hor1"
        android:layout_above="@+id/btnAddBar"
        android:layout_width="match_parent"
        android:layout_height= "1dp"
        android:background="#000"
        android:layout_marginBottom="5sp"/>

    <LinearLayout
        android:id="@+id/btnAddBar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5sp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="ADD"
            android:id="@+id/button" />



        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Abort"
            android:id="@+id/button2" />
    </LinearLayout>

</RelativeLayout>
